# ldrb

./: .buildinfo  .bumpversion.cfg  .cspell_dict.txt  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.html  Dockerfile  LICENSE  Makefile  README.html  README.md  basis_functions.html  biv_demo.html  cspell.config.yaml  demo_biv.html  demo_lifex_idealized_LV.html  demo_lifex_strocchi_LV.html  demo_lv.html  demo_patient_lv.html  dolfinldrb.py  environment.yml  genindex.html  gmsh2dolfin.py  ldrb.html  lv_demo.html  modules.html  objects.inv  publish_conda.sh  py-modindex.html  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: docker-image.yml  github-pages.yml  main.yml  pypi.yml  pythonpublish.yml
_sources/: DEMO.md  README.md  basis_functions.md  demo_biv.md  demo_lifex_idealized_LV.md  demo_lifex_strocchi_LV.md  demo_lv.md  demo_patient_lv.md  ldrb.rst  lv_demo.md  modules.rst
conda.recipe/: meta.yaml  upload.sh
conda.recipe/linux-64/: ldrb-0.1-py36_0.tar.bz2
demos/: basis_functions.py  demo_biv.py  demo_lifex_idealized_LV.py  demo_lifex_meshes.py  demo_lifex_strocchi_LV.py  demo_lv.py  demo_patient_lv.py  demo_slab.py  mesh.msh  slab.msh
docs/: DEMO.md  _config.yml  _toc.yml  biv_demo.md
docs/source/: biv_demo.rst  conf.py  demo.rst  index.rst  ldrb.rst  lv_demo.rst
ldrb/: __init__.py  _numba.py  calculus.py  ldrb.py  save.py  utils.py
tests/: test_ldrb.py  test_save.py  utils.py
