[metadata]
name = ldrb
description = Laplace-Dirichlet Rule-based algorithm for assigning myocardial fiber orientations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finsberg/ldrb
author = Henrik Finsberg
author_email = henriknf@simula.no
license = LGPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = cardiac modeling, fiber orientations

[options]
packages = find:
install_requires =
    h5py
    numba
    numpy
    numpy-quaternion
    scipy
python_requires = >=3.6
zip_safe = False

[options.extras_require]
dev =
    black
    bump2version
    flake8
    ipython
    isort
    mypy
    pdbpp
    pip
    pre-commit
    sphinx
    twine
    wheel
docs =
    Sphinx
    jupyter-book
    myst-parser
    pandoc
test =
    black
    flake8
    mypy
    pytest
    pytest-cov

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
skip = venv

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=ldrb --cov-report html -v
testpaths =
    tests

[mypy]
files = ldrb,tests
ignore_missing_imports = true
